--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -71,6 +71,15 @@
     @apply text-secondary600;
     font-size: 1.8rem;
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 body {
   background-color: #fdf6ed;
