build the support-the-kids-section

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -80,6 +80,14 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
+
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+
+  .flex-between {
+    @apply flex items-center justify-between;
+  }
 }
 body {
   background-color: #fdf6ed;
